# todoist-interlingua

./: .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/todoist_interlingua/: __init__.py  cli.py  models.py  todoist_interlingua.py
tests/: __init__.py  test_cli.py  test_todoist_interlingua.py
todoist_interlingua/: __init__.py  cli.py  interlingua.py  models.py
