[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todoist_interlingua"
version = "0.1.0"
description = "A tool for synchronizing Todoist data into a Pydantic validated JSON format, allowing for easy editing and pushing changes back to Todoist."
readme = "README.rst"
authors = [
  {name = "Joseph Turian", email = "lastname@gmail.com"}
]
maintainers = [
  {name = "Joseph Turian", email = "lastname@gmail.com"}
]
classifiers = [
  # Add appropriate classifiers here
]
license = {text = "Apache Software License 2.0"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]
bugs = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"
changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/blob/master/changelog.md"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[tool.setuptools]
package-dir = {"" = "."}

#[tool.setuptools.package-data]
#"*" = ["*.*"]

[tool.setuptools.packages.find]
where = ["todoist_interlingua"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"
